Bug 777186 - Detect NULL return from newBlock(). r=dvander