js/src/ion/IonBuilder.cpp
@@ -265,7 +265,8 @@ IonBuilder::build()
         return false;
 
     IonSpew(IonSpew_Scripts, "Analyzing script %s:%d (%p) (usecount=%d) (maxloopcount=%d)",
-            script->filename, script->lineno, (void *) script, (int) script->getUseCount(), (int) script->getMaxLoopCount());
+            script->filename, script->lineno, (void *)script, (int)script->getUseCount(),
+            (int)script->getMaxLoopCount());
 
     if (!graph().addScript(script))
         return false;
@@ -1602,7 +1603,7 @@ IonBuilder::processTableSwitchEnd(CFGState &state)
         successor = newBlock(current, state.tableswitch.exitpc);
 
     if (!successor)
-        return ControlStatus_Ended;
+        return ControlStatus_Error;
 
     // If there is current, the current block flows into this one.
     // So current is also a predecessor to this block
@@ -1940,8 +1941,11 @@ IonBuilder::doWhileLoop(JSOp op, jssrcnote *sn)
     jsbytecode *bodyStart = GetNextPc(GetNextPc(pc));
     jsbytecode *bodyEnd = conditionpc;
     jsbytecode *exitpc = GetNextPc(ifne);
-    if (!pushLoop(CFGState::DO_WHILE_LOOP_BODY, conditionpc, header, bodyStart, bodyEnd, exitpc, conditionpc))
+    if (!pushLoop(CFGState::DO_WHILE_LOOP_BODY, conditionpc, header,
+                  bodyStart, bodyEnd, exitpc, conditionpc))
+    {
         return ControlStatus_Error;
+    }
 
     CFGState &state = cfgStack_.back();
     state.loop.updatepc = conditionpc;
@@ -3212,6 +3216,8 @@ IonBuilder::inlineScriptedCall(AutoObjectVector &targets, uint32 argc, bool cons
     JS_ASSERT(types::IsInlinableCall(pc));
     jsbytecode *postCall = GetNextPc(pc);
     MBasicBlock *bottom = newBlock(NULL, postCall);
+    if (!bottom)
+        return false;
     bottom->setCallerResumePoint(callerResumePoint_);
 
     Vector<MDefinition *, 8, IonAllocPolicy> retvalDefns;
@@ -3314,7 +3320,8 @@ IonBuilder::inlineScriptedCall(AutoObjectVector &targets, uint32 argc, bool cons
                 MPhi *phi = MPhi::New(inlineBottom->stackDepth() - argc - 2);
                 inlineBottom->addPhi(phi);
 
-                for (MDefinition **it = retvalDefns.begin(), **end = retvalDefns.end(); it != end; ++it) {
+                MDefinition **it = retvalDefns.begin(), **end = retvalDefns.end();
+                for (; it != end; ++it) {
                     if (!phi->addInput(*it))
                         return false;
                 }
@@ -4092,7 +4099,8 @@ IonBuilder::jsop_initprop(HandlePropertyName name)
     MSlots *slots = MSlots::New(obj);
     current->add(slots);
 
-    MStoreSlot *store = MStoreSlot::New(slots, templateObject->dynamicSlotIndex(shape->slot()), value);
+    uint32 slot = templateObject->dynamicSlotIndex(shape->slot());
+    MStoreSlot *store = MStoreSlot::New(slots, slot, value);
     if (needsBarrier)
         store->setNeedsBarrier();
 
@@ -5030,7 +5038,8 @@ IonBuilder::jsop_getelem_typed(int arrayType)
         // Assume we will read out-of-bound values. In this case the
         // bounds check will be part of the instruction, and the instruction
         // will always return a Value.
-        MLoadTypedArrayElementHole *load = MLoadTypedArrayElementHole::New(obj, id, arrayType, allowDouble);
+        MLoadTypedArrayElementHole *load =
+            MLoadTypedArrayElementHole::New(obj, id, arrayType, allowDouble);
         current->add(load);
         current->push(load);
 
